finished most unit tests